--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Genres#show</h1>
-<p>Find me in app/views/genres/show.html.erb</p>
+<h1>My Genre</h1>
+<h1>My edit</h1>
+<h1>My genre name</h1>
+<p>@genre.name</p>
+
