--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -3,7 +3,7 @@
 <h1>My song name</h1>
 <p>@song.name</p>
 
-<h1>My song artist</h1>
+<h1>My Artist</h1>
 <p><%= @song.artist_id %></p>
 <a href="/artists/#{@song.artist_id}"><%= @song.artist.name %></a>
 
