--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -5,8 +5,8 @@
 
 <h1>My Artist</h1>
 <p><%= @song.artist_id %></p>
-<a href="/artists/#{@song.artist_id}"><%= @song.artist.name %></a>
+<a href="/artists/<%= @song.artist_id %>"><%= @song.artist.name %></a>
 
 <h1>My Genre</h1>
 <p><%= @song.genre_id %></p>
-<a href="/artists/#{@song.genre_id}"><%= @song.genre.name %></a>
+<a href="/artists/<%= @song.genre_id %>"><%= @song.genre.name %></a>
