automatically backed up by learn

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -9,4 +9,4 @@
 
 <h1>My Genre</h1>
 <p><%= @song.genre_id %></p>
-<a href="/artists/<%= @song.genre_id %>"><%= @song.genre.name %></a>
+<a href="/genres/<%= @song.genre_id %>"><%= @song.genre.name %></a>
